# mlops_lazada_review

./: .gitignore  Makefile  README.md  pyproject.toml
.dvc/: .gitignore  config
data/interim/: x_train_1.pkl  x_train_2.pkl
data/processed/: .gitignore  x_test_vec_1.pkl.dvc  x_test_vec_2.pkl.dvc  x_train_vec_1.pkl.dvc  x_train_vec_2.pkl.dvc  y_test_1.pkl.dvc  y_test_2.pkl.dvc  y_train_1.pkl.dvc  y_train_2.pkl.dvc
data/raw/: .gitignore  categories.txt.dvc  dataset_items.csv.dvc  dataset_reviews.csv.dvc
docs/: mkdocs.yml
docs/docs/: index.md
lazada_indonesia_review/: __init__.py  dataset.py  features.py  plots.py
lazada_indonesia_review/modeling/: predict.py  train.py
models/: vectorizer_1.pkl  vectorizer_2.pkl
notebooks/: 1-ingest_data.ipynb  2-eda.ipynb  2.2-preprocessing.ipynb  2.3-modelling.ipynb  3-preprocessing.ipynb  3.2-modelling.ipynb  3.3-evaluate.ipynb
src/: ingest_minio.py  main.py
